--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,90 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+    </dependency>
+
+
+      <!--log4j2-->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.21</version>
+      </dependency>
+      <!-- log4j2 -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.9.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.9.0</version>
+      </dependency>
+      <!-- 用于slf4j与log4j2桥接 -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <version>2.9.0</version>
+         <!-- <exclusions>
+              <exclusion>
+                      <groupId>org.slf4j</groupId>
+                      <artifactId>slf4j-api</artifactId>
+              </exclusion>
+          </exclusions>-->
+      </dependency>
+
+      <!-- 使用log4j2的异步日志需要的依赖 -->
+      <dependency>
+          <groupId>com.lmax</groupId>
+          <artifactId>disruptor</artifactId>
+          <version>3.3.5</version>
+      </dependency>
+
+<!--      <dependency>-->
+<!--          <groupId>org.apache.logging.log4j</groupId>-->
+<!--          <artifactId>log4j-api</artifactId>-->
+<!--          <version>2.6.1</version>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.apache.logging.log4j</groupId>-->
+<!--          <artifactId>log4j-core</artifactId>-->
+<!--          <version>2.6.1</version>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.apache.logging.log4j</groupId>-->
+<!--          <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--          <version>2.6.1</version>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.slf4j</groupId>-->
+<!--          <artifactId>slf4j-log4j12</artifactId>-->
+<!--          <version>1.7.26</version>-->
+<!--      </dependency>-->
+
+<!--      <dependency>-->
+<!--          <groupId>org.apache.logging.log4j</groupId>-->
+<!--          <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--          <version>2.9.0</version>-->
+<!--      </dependency>-->
+
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.7</version>
+      </dependency>
+
+
+      <dependency>
+          <groupId>org.apache.commons.io</groupId>
+          <artifactId>commonsIO</artifactId>
+          <version>2.5.0</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -70,5 +154,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
