--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,19 @@
           <artifactId>commonsIO</artifactId>
           <version>2.5.0</version>
       </dependency>
+
+      <dependency>
+          <groupId>com.jgoodies</groupId>
+          <artifactId>jgoodies-common</artifactId>
+          <version>1.8.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.jgoodies</groupId>
+          <artifactId>looks</artifactId>
+          <version>2.2.2</version>
+      </dependency>
+
   </dependencies>
 
   <build>
