--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,30 @@
           <artifactId>looks</artifactId>
           <version>2.2.2</version>
       </dependency>
+<!--      <dependency>-->
+<!--          <groupId>org.apache.commons</groupId>-->
+<!--          <artifactId>commons-lang3</artifactId>-->
+<!--          <version>3.1</version>-->
+<!--      </dependency>-->
+
+      <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.12</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+      <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+          <version>1.4.7</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/activation/activation -->
+      <dependency>
+          <groupId>activation</groupId>
+          <artifactId>activation</artifactId>
+          <version>1.0.2</version>
+      </dependency>
 
   </dependencies>
 
