--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,19 @@
           <version>1.0.2</version>
       </dependency>
 
+<!--      jacakson-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.9.9</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.9.9.2</version>
+      </dependency>
+
   </dependencies>
 
   <build>
